--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -11,14 +11,14 @@ fieldset {
   padding-bottom: 12px;
   margin-bottom: 20px;
   background-color: #f0f0f0;
-  font-size: 12px;
+  font-size: 0.923em;
 }
 
 .error_messages h2 {
   text-align: left;
   font-weight: bold;
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 0.923em;
   margin: 0;
   background-color: #c00;
   color: #fff;
@@ -49,7 +49,7 @@ fieldset {
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
-  font-size: 12px;
+  font-size: 0.923em;
   margin: -7px;
   margin-bottom: 0px;
   background-color: #c00;
@@ -57,7 +57,7 @@ fieldset {
 }
 
 #error_explanation ul li {
-  font-size: 12px;
+  font-size: 0.923em;
   list-style: square;
 }
 
@@ -70,7 +70,7 @@ div.field, div.actions {
 body {
   background-color: #FFFFFF;
   font-family: Arial,Helvetica,sans-serif;
-  font-size: 13px;
+  font-size: 1.00em;
 }
 
 a img {
@@ -128,7 +128,7 @@ a img {
 
 textarea {
 	font-family: Verdana, Helvetica, Arial, san-serif;
-	font-size: 11px;
+	font-size: 0.846em;
 }
 
 /*
@@ -486,7 +486,7 @@ a.nav:hover, a.nav:active {
 div.pageNav {
 	color: #ffad05;
 	font-weight: bold;
-	font-size: 11px;
+	font-size: 0.846em;
 	margin: 10px 0px;
 	padding: 5px 0px 0px;
 	border-top: 6px double #eef1fc;
@@ -495,7 +495,7 @@ div.pageNav {
 div.pageNav-upper {
 	color: #ffad05;
 	font-weight: bold;
-	font-size: 11px;
+	font-size: 0.846em;
 	margin: -30px 0px 20px;
 	padding: 3px 0px 0px;
 }
@@ -575,7 +575,7 @@ a.simplemodal-close:hover, .simplemodal-close:active {
 span.first, span.last, span.prev, span.next {
 	color: #243b7c;
 	font-weight: bold;
-	font-size: 12px;
+	font-size: 0.923em;
 	margin: 10px 0px;
 	padding: 0px 10px 0px 0px;
 	display: inline-block;
@@ -585,7 +585,7 @@ span.first, span.last, span.prev, span.next {
 span.pageNum {
 	color: #243b7c;
 	font-weight: bold;
-	font-size: 12px;
+	font-size: 0.923em;
 	margin: 10px 0px;
 	padding: 0px 10px 0px 0px;
 	display: inline-block;
