--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -7,6 +7,13 @@
   // store the item that has focus before opening the modal window
   var focusedElementBeforeModal;
 
+  // Fix for window.location.origin for IE
+  if (!window.location.origin) {
+    window.location.origin = window.location.protocol + "//" +
+      window.location.hostname + (window.location.port ? ':' +
+      window.location.port: '');
+  }
+
   <%= render 'load_jquery' %>
 
   /* main - Main function for the voc invitation.  This function is called once */
