--- a/app/views/widget/_load_jquery.js.erb
+++ b/app/views/widget/_load_jquery.js.erb
@@ -34,7 +34,7 @@ function scriptLoadHandler(){
   if(countScriptCalled > 1) return;
   /* Restore jQuery and window.jQuery to their original values */
   var interval = setInterval(function(){
-    if((typeof window.jQuery !== "undefined") && window.jQuery.fn.jquery != '1.7.2') {
+    if((typeof window.jQuery !== "undefined") && window.jQuery.fn.jquery == '1.7.2') {
       clearInterval(interval);
       jQuery = window.jQuery.noConflict();
 
