--- a/app/views/widget/_load_jquery.js.erb
+++ b/app/views/widget/_load_jquery.js.erb
@@ -49,7 +49,7 @@ function scriptLoadHandler(){
   var interval = setInterval(function(){
     if((typeof window.jQuery !== "undefined") && window.jQuery.fn.jquery == '1.7.2') {
       clearInterval(interval);
-      jQuery = window.jQuery.noConflict();
+      jQuery = window.jQuery.noConflict(true);
 
       loadMobileBrowserDetection();
 
