--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -227,10 +227,14 @@
       popurl = popurl + "stylesheet=<%= params[:stylesheet] %>&";
       <% end %>
       popurl = popurl + "page_url=" + pageurl;
-      window.open(popurl,"","width=600,height=270,scrollbars,");
+      new_window = window.open(popurl,"","width=600,height=270,scrollbars,");
       // END logic for executing the Enter button action for the modal window
       hideModal();
       jQuery.post("http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/invitation_accept");
+
+      if (window.focus) {
+        new_window.focus();
+      }
   }
 
   function showModal(obj) {
