--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -1,5 +1,5 @@
 /* Use an immediately invoked function to isolate variables */
-(function(){
+(function(existing_jquery){
 
   // jQuery formatted selector to search for focusable items
   var focusableElementsString = "a[href], area[href], input:not([disabled]), select:not([disabled]), textarea:not([disabled]), button:not([disabled]), iframe, object, embed, *[tabindex], *[contenteditable]";
@@ -271,4 +271,4 @@
       focusedElementBeforeModal.focus();
   }
 
-})();
+})(<%= params[:jquery] || 'window.jQuery' %>);
