Remove console.log statements that seem to be breaking IE

--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -271,4 +271,4 @@
       focusedElementBeforeModal.focus();
   }
 
-})(<%= params[:jquery] || 'window.jQuery' %>);
+})(<%= params[:jquery] || 'undefined' %>);
