Update the protocol for the jQuery cdn url to use the correct protocol

--- a/app/views/widget/_load_jquery.js.erb
+++ b/app/views/widget/_load_jquery.js.erb
@@ -21,7 +21,7 @@ if(existing_jquery != undefined && existing_jquery.fn != undefined && existing_j
   var script_tag = document.createElement('script');
   script_tag.setAttribute('type', 'text/javascript');
   script_tag.setAttribute('src',
-    "http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js");
+    "//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js");
 
   /* Wait for the script to load */
   //Other browsers
