specify that partials should render the html format
Even though the request is made through ajax with the JSON type we want to
render the partials with the .html.erb extension and not .js.erb so we have to
specify it manually in the partial string.

--- a/app/views/surveys/_text_question.html.erb
+++ b/app/views/surveys/_text_question.html.erb
@@ -1,5 +1,5 @@
 <% answer_tag_id = "response[raw_responses_attributes][#{index}][answer]" %>
-<%= render partial: 'question_statement', locals: {
+<%= render partial: 'question_statement.html.erbå', locals: {
     index: index,
     element: element,
     question_number: question_number,
