--- a/app/views/surveys/_choice_question.html.erb
+++ b/app/views/surveys/_choice_question.html.erb
@@ -9,7 +9,7 @@ end -%>
     <legend>
 <% end %>
 
-<%= render partial: 'question_statement', locals: {
+<%= render partial: 'question_statement.html.erb', locals: {
     index: index,
     element: element,
     question_number: question_number,
