--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -3,6 +3,13 @@
 
   <%= render 'load_jquery' %>
 
+  // Fix for window.location.origin for IE
+  if (!window.location.origin) {
+    window.location.origin = window.location.protocol + "//" +
+      window.location.hostname + (window.location.port ? ':' +
+      window.location.port: '');
+  }
+
   /* main - Main function for the voc widget.  This function is called once */
   /* jQuery has been loaded.                                                */
   function main() {
