--- a/app/views/surveys/test_invitation.html.erb
+++ b/app/views/surveys/test_invitation.html.erb
@@ -3,5 +3,6 @@ Testing survey <%= params[:id] %>
 <noscript>
   <iframe src="<%= survey_path(params[:id]) %>"></iframe>
 </noscript>
-
-<%= javascript_include_tag widget_invitation_path(format: :js, survey_id: params[:id], target_id: "survey_target", test_invitation: true) %>
+bluh
+<script type="text/javascript"
+        src="<%= widget_invitation_path(format: :js, survey_id: params[:id], target_id: "survey_target", test_invitation: true).html_safe %>"></script>
