Replace OMB Expiration Date tag
gsub the {{omb_expiration_date}} tag to the expiration date set in the survey

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -121,7 +121,7 @@
 								<% end -%>
 							<% end -%>
 						<% else %>
-              				<%= element.assetable.snippet.html_safe%>
+            	<%= element.assetable.snippet.gsub('{{omb_expiration_date}}', @survey.omb_expiration_date.to_s).html_safe%>
 						<% end %>
 					</li>
 					<% index = index + 1%>
