--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -77,6 +77,9 @@
 <% end -%>
 
 <script type='text/javascript'>
+if(typeof window.VOCjQuery !== "undefined") {
+  var jQuery = window.VOCjQuery;
+}
 jQuery(function() {
   // create and post to a hidden iframe to avoid cross-domain POST limitations
   var uniqueString = "surveyVisitContainerIframe";
