--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -13,6 +13,8 @@
   /* main - Main function for the voc widget.  This function is called once */
   /* jQuery has been loaded.                                                */
   function main() {
+    /* create window jquery object */
+    window.VOCjQuery = jQuery;
     /* create the voc object */
     window.voc = {
       Survey: survey
