#1265 Focus on first input with widget when going to next or previous page

--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -104,6 +104,15 @@
 })();
 
 /******************* Survey.js ******************************************/
+function focus_on_page(page){
+  input_element = jQuery("#page_" + page + " :input:enabled:visible:first");
+  if(input_element.length) {
+    input_element.focus();
+  } else {
+    jQuery("#page_" + page).focus();
+  }
+}
+
 function show_next_page(page){
   var required_unanswered = false;
 
@@ -114,10 +123,11 @@ function show_next_page(page){
     var next_page = jQuery("#page_" + page + "_next_page").val();
 
     /* Set the prev page on next page */
-   set_prev_page(page, next_page);
+    set_prev_page(page, next_page);
 
     jQuery("#page_"+ next_page).show();
     window.location.hash="PAGE_" + next_page;
+    focus_on_page(next_page)
   } else {
     alert(survey_required_fields_error);
   }
@@ -126,8 +136,10 @@ function show_next_page(page){
 
 function show_prev_page(page){
   jQuery("#page_"+page).hide();
-  jQuery("#page_"+ jQuery("#page_" + page + "_prev_page").val() ).show();
-  window.location.hash = "PAGE_" + page;
+  var prev_page = jQuery("#page_" + page + "_prev_page").val();
+  jQuery("#page_"+ prev_page).show();
+  window.location.hash = "PAGE_" + prev_page;
+  focus_on_page(prev_page)
 }
 
 function set_next_page(current_page, next_page) {
