--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -131,14 +131,14 @@
 				<div class="surveyNav">
 					<% unless page.page_number == 1 or (params[:noback].to_s.downcase=="true") %>
             <% previous_page_text = @survey.previous_page_text.blank? ? "Previous Page" : @survey.previous_page_text %>
-						<span class="surveyNavPrev"><%= link_to_function previous_page_text, "show_prev_page(#{page.page_number})", :class=>"surveyNav"  %></span> |
+						<span class="surveyNavPrev"><%= link_to_function previous_page_text, "VOC.show_prev_page(#{page.page_number})", :class=>"surveyNav"  %></span> |
 					<% end %>
 					<% unless page.page_number == @survey_version.pages.count %>
             <% next_page_text = @survey.next_page_text.blank? ? "Next Page" : @survey.next_page_text %>
-						<span class="surveyNavNext"><%= link_to_function next_page_text, "show_next_page(#{page.page_number})", :class=>"surveyNav" %></span>
+						<span class="surveyNavNext"><%= link_to_function next_page_text, "VOC.show_next_page(#{page.page_number})", :class=>"surveyNav" %></span>
 					<% end %>
           <% submit_button_text = @survey.submit_button_text.blank? ? "Submit Survey" : @survey.submit_button_text %>
-					<span class="surveyNavSub"><%= submit_tag(submit_button_text, :onclick=>"return validate_before_submit(#{page.page_number})")if page.page_number == @survey_version.pages.count %></span>
+					<span class="surveyNavSub"><%= submit_tag(submit_button_text, :onclick=>"return VOC.validate_before_submit(#{page.page_number})")if page.page_number == @survey_version.pages.count %></span>
 				</div>
         <script>
         <% if @survey.js_required_fields_error.blank? %>
