--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -15,6 +15,8 @@
     <%= hidden_field_tag "survey_id", @survey.id %>
     <%= hidden_field_tag "survey_version_id", @survey_version.id %>
 		<%= hidden_field_tag "response[page_url]", params[:page_url] %>
+
+		<%= hidden_field_tag "response[device]",  device_type %>
 	  <% index = 0 %>
 		<% for page in @survey_version.pages %>
 			<% question_number = 0 %>
